# alpha_fsm

./: .gitignore  README.md
Interface/: InterfaceExcel.md
docs/: 02_状态规格手册.md  (+13 more)
fsm_ws/src/box_perception_msgs/: CMakeLists.txt  package.xml
fsm_ws/src/box_perception_msgs/msg/: BoxPerceptionResult.msg  BoxResult.msg
fsm_ws/src/fsm_config/: package.xml  setup.cfg  setup.py
fsm_ws/src/fsm_config/launch/: bringup_full.launch.py  bringup_strategy_only.launch.py  bringup_with_kinematic_sim.launch.py  bringup_with_mock.launch.py
fsm_ws/src/fsm_config/params/: business.yaml  error_codes.yaml  fsm.yaml  interfaces.yaml  logging.yaml  sim.yaml
fsm_ws/src/fsm_core/: package.xml  setup.cfg  setup.py
fsm_ws/src/fsm_core/fsm_core/: __init__.py  base_state.py  broadcaster.py  constants.py  error_code.py  fsm_engine.py  node_base.py  recovery_policy.py  ros2_helpers.py  state_context.py  state_logger.py  transition.py  vacuum_model.py
fsm_ws/src/fsm_msgs/: CMakeLists.txt  package.xml
fsm_ws/src/fsm_msgs/action/: ExecutePairGrasp.action  NavigateToPose.action  RunWallDestacking.action
fsm_ws/src/fsm_msgs/msg/: BoxDetection.msg  BoxDetectionArray.msg  ErrorReport.msg  FsmLogEvent.msg  FsmStateSnapshot.msg  GraspPair.msg  GridSlotState.msg  NavGoal.msg  NavResult.msg  PairGraspResult.msg  PerceptionHealth.msg  SafetyStatus.msg  VacuumCommand.msg  WallGridSnapshot.msg
fsm_ws/src/fsm_msgs/srv/: BaseRecoveryCommand.srv  ClearError.srv  InjectFailure.srv  TaskControl.srv
fsm_ws/src/fsm_test/: package.xml  setup.cfg  setup.py
fsm_ws/src/fsm_test/fsm_test/fixtures/: grids.py  nav_results.py  pairs.py
fsm_ws/src/fsm_test/fsm_test/helpers/: action_client_helpers.py  tf_helpers.py  topic_assertions.py
fsm_ws/src/fsm_test/fsm_test/inject/: inject_failure_srv.py
fsm_ws/src/fsm_test/fsm_test/mocks/: common.py  mock_chassis_status_publisher.py  mock_navigation_manager_node.py  mock_pair_grasp_execution_node.py  mock_perception_adapter_node.py  mock_safety_button.py  mock_vacuum_io_node.py
fsm_ws/src/fsm_test/fsm_test/sim/: __init__.py  fake_nav2_base_node.py  scene_loader.py  sim_world_node.py
fsm_ws/src/fsm_test/l3_sim_03_assets/: README.md  SUPPLIED_REVIEW.md  UPSTREAM_IMPORT.md
fsm_ws/src/fsm_test/l3_sim_03_assets/controllers/: README.md  ros2_controllers.example.yaml  ros2_controllers.yaml
fsm_ws/src/fsm_test/l3_sim_03_assets/moveit_config/: README.md
fsm_ws/src/fsm_test/l3_sim_03_assets/moveit_config/config/: README.md  alfa_robot.ros2_control.xacro  alfa_robot.srdf  alfa_robot.urdf.xacro  initial_positions.yaml  joint_limits.example.yaml  joint_limits.yaml  kinematics.example.yaml  kinematics.yaml  moveit_controllers.example.yaml  moveit_controllers.yaml  mujoco_initial_positions.yaml  ompl_planning.example.yaml
fsm_ws/src/fsm_test/l3_sim_03_assets/moveit_config/launch/: README.md  demo.launch.py  dual_arm_planner.launch.py  move_group.launch.py  moveit_rviz.launch.py  mujoco_digital_twin.launch.py  mujoco_planning_scene_bridge.launch.py  mujoco_sync_view.launch.py  reachability_tester.launch.py  rsp.launch.py  rviz_dual_goal_pose_monitor.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fsm_ws/src/fsm_test/l3_sim_03_assets/robot_description/: README.md
fsm_ws/src/fsm_test/l3_sim_03_assets/robot_description/meshes/: README.md
fsm_ws/src/fsm_test/l3_sim_03_assets/robot_description/urdf/: README.md  alfa_robot_l3_sim.urdf.xacro  alfa_robot_macro.ros2_control.xacro  alfa_robot_v2_arm_v6_raw.urdf
fsm_ws/src/fsm_test/l3_sim_03_assets/rviz/: README.md  moveit.rviz
fsm_ws/src/fsm_test/l3_sim_03_assets/sample_goals/: README.md  boundary_pairs.example.yaml  standard_pair.example.yaml
fsm_ws/src/fsm_test/l3_sim_03_assets/supplied/alfa_robot_v2_arm_v6/config/: joint_names_alfa_robot_v2_arm_v6.yaml
fsm_ws/src/fsm_test/launch/: task_manager_l2.launch.py
fsm_ws/src/fsm_test/test/: test_data_models.py  test_error_policy.py  test_fsm_engine.py  test_isaac_sim_bridge_logic.py  test_mock_modules.py  test_navigation_manager_logic.py  test_pair_grasp_scene_geometry.py  test_pair_grasp_self_collision_contract.py  test_ros2_helpers.py  test_strategy_algorithms.py  test_task_manager_and_pair_selection.py
fsm_ws/src/fsm_ui/: package.xml  setup.cfg  setup.py
fsm_ws/src/isaac_sim_bridge/: package.xml  setup.py
fsm_ws/src/isaac_sim_bridge/isaac_sim_bridge/: __init__.py  chassis_bridge_node.py  config.py  ground_truth_perception_node.py  scene_truth.py
fsm_ws/src/navigation_manager/: package.xml  setup.py
fsm_ws/src/navigation_manager/navigation_manager/: backend.py  fine_alignment.py  geometry.py  nav_logic.py  node.py
fsm_ws/src/pair_grasp_execution/: package.xml  setup.cfg  setup.py
fsm_ws/src/pair_grasp_execution/pair_grasp_execution/: backend.py  errors.py  geometry.py  moveit_goal.py  node.py  planning_scene.py  scene_geometry.py  stages.py  target_builder.py
fsm_ws/src/perception_adapter/: package.xml  setup.cfg  setup.py
fsm_ws/src/perception_adapter/perception_adapter/: adapter.py  converter.py  geometry.py  health.py  node.py  tf_adapter.py
fsm_ws/src/task_manager/: package.xml  setup.py
fsm_ws/src/task_manager/task_manager/: __init__.py  context.py  node.py
fsm_ws/src/vacuum_io/: package.xml  setup.cfg  setup.py
fsm_ws/src/vacuum_io/vacuum_io/: node.py
fsm_ws/src/wall_destacking_strategy/: package.xml  setup.cfg  setup.py
fsm_ws/src/wall_destacking_strategy/wall_destacking_strategy/: __init__.py  algorithms.py  context.py  node.py
fsm_ws/src/wall_destacking_strategy/wall_destacking_strategy/data/: __init__.py  box_detection.py  common.py  grasp_pair.py  grid_slot.py  nav_goal.py  nav_result.py  pair_grasp_result.py  wall_grid.py
src/isaac_visualization_bridge/: package.xml  setup.py
src/isaac_visualization_bridge/isaac_visualization_bridge/: validation_status_node.py
src/robot_state_machine/: package.xml  setup.py
src/robot_state_machine/robot_state_machine/: alfa_task_state_machine_node.py  alfa_truth_demo_state_machine_node.py  state_summary_node.py
(+114 files in other folders)
