<?xml version="1.0"?>
<package format="3">
  <name>isaac_visualization_bridge</name>
  <version>0.1.0</version>
  <description>Validation visualization helpers for WSL ROS2 and Windows Isaac Sim.</description>
  <maintainer email="dev@sevnova.local">sevnova</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>fsm_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
