<?xml version="1.0"?>
<package format="3">
  <name>robot_state_machine</name>
  <version>0.1.0</version>
  <description>State-machine validation helpers for the Alfa WSL ROS workspace.</description>
  <maintainer email="dev@sevnova.local">sevnova</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>fsm_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
