<?xml version="1.0"?>
<package format="3">
  <name>fsm_core</name>
  <version>1.0.0</version>
  <description>Core FSM engine, error table, recovery policy, and shared helpers.</description>
  <maintainer email="dev@sevnova.local">sevnova_fsm</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>fsm_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
