<?xml version="1.0"?>
<package format="3">
  <name>fsm_msgs</name>
  <version>1.0.0</version>
  <description>Blue Sword FSM custom messages, services, and actions.</description>
  <maintainer email="dev@sevnova.local">sevnova_fsm</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
