<?xml version="1.0"?>
<package format="3">
  <name>fsm_test</name>
  <version>1.0.0</version>
  <description>FSM mocks and tests.</description>
  <maintainer email="dev@sevnova.local">sevnova_fsm</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>box_perception_msgs</exec_depend>
  <exec_depend>fsm_core</exec_depend>
  <exec_depend>fsm_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>isaac_sim_bridge</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>navigation_manager</exec_depend>
  <exec_depend>pair_grasp_execution</exec_depend>
  <exec_depend>task_manager</exec_depend>
  <exec_depend>wall_destacking_strategy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
