<?xml version="1.0"?>
<package format="3">
  <name>isaac_sim_bridge</name>
  <version>0.1.0</version>
  <description>Isaac Sim ground-truth and chassis bridge nodes for FSM full-flow simulation.</description>
  <maintainer email="dev@sevnova.local">sevnova_fsm</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>fsm_core</exec_depend>
  <exec_depend>fsm_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
