<?xml version="1.0"?>
<package format="3">
  <name>vacuum_io</name>
  <version>1.0.0</version>
  <description>Vacuum I/O adapter node skeleton.</description>
  <maintainer email="dev@sevnova.local">sevnova_fsm</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>fsm_core</exec_depend>
  <exec_depend>fsm_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
